--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,23 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MP 0</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <h1>Hello World!</h1>
-  <img src="assets/image.jpg" />
+  <div class="card">
+  <h1>Greetings from Luyun Li!</h1>
+  <img src="assets/photo.JPG" />
+  <h2>Luyun Li</h2>
+  <p class="email">luyunli2@illinois.edu</p>
+  <a href="https://github.com/BruceLee7" target="_blank">GitHub</a>
+  <p class="bio">
+    I'm a new MCS student at UIUC. I graduated from Nanyang Technological University in Singapore with a major in Computer Science. 
+    I'm happy to join the class of CS 409. I would like to learn more about full stack development and improve my programming skills.
+    In my free time, I enjoy sports and poker games. Hope everyone is doing well and looking forward to a great semester!
+  </p>
+</div>
+
 
   <script src="bundle.js" type="text/javascript"></script>
 </body>
